# project_N

./: README.md  calculator.py
algorithms/: dumps.csv  sorting.py
algorithms/HASH_TABLE/: hash.py
algorithms/logic/: logic.py
gome_tests/: pyproject.toml
gome_tests/gome_tests/: func_get_val.py  func_set_.py
gome_tests/tests/: test_func_get_val.py
london_co/: london_co.py  main_setting_venv.py
solve/: solve.py
testing_approaches/: pyproject.toml
testing_approaches/testing_approaches/: get.py  index_of.py  slice.py
testing_approaches/tests/: test_get.py  test_index_of.py  test_slice.py
whl_poetry/: pyproject.toml
