[tool.poetry]
name = "gome-tests"
version = "0.1.0"
description = ""
authors = ["Maksim Zorihin <maxic499@gmail.com>"]
readme = "README.md"
packages = [{include = "gome_tests"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
