[tool.poetry]
name = "testing-approaches"
version = "0.1.0"
description = ""
authors = ["Maksim Zorihin <maxic499@gmail.com>"]
readme = "README.md"
packages = [{include = "testing_approaches"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
